# DevOps-Course-Starter

./: .dockerignore  .env.template  .env.test  .gitignore  Deployment.yaml  Dockerfile  Dockerfile.test  README.md  Service.yml  main.tf  outputs.tf  pyproject.toml  requirementsOLD.txt  service.yaml  variables.tf
.github/workflows/: My-ci-pipeline.yml
Documents/: Componant.drawio  Container.drawio  Context.drawio
deploy/: .env.j2  inventory.ini  playbook.yml  todoapp.service
tests/: ReName_test_Intergration.py  test_Intergration.py  test_ViewModel.py
tests_e2e/: test_e2e
todo_app/: View_Class.py  app.py  flask_config.py
todo_app/data/: Mongo_items.py  mongo_items.py  task_class.py  trello_items.py  user_class.py
todo_app/templates/: index.html  layout.html
